[package]
name = "rusteroids"
description = "Your plotter-friendly Asteroids clone"
authors = ["Antoine Beyeler"]
version = "0.1.0-alpha.0"
edition = "2021"


[dependencies]
bevy = { version = "0.11.2" }
bevy-inspector-egui = { version = "0.19.0" }
rand = "0.8.5"
vsvg = { git = "https://github.com/abey79/vsvg", rev = "89de92da3e247d3f5a2a4073c566196d328128bf", features = ["bevy"] }
kurbo = "0.9.1" # sync with vsvg

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.64", features = ["Document", "Element", "Window", "HtmlElement"] }
wasm-bindgen = "0.2.87"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3


[patch.crates-io]
usvg = { git = "https://github.com/abey79/resvg", branch = "vsvg" }
rosvgtree = { git = "https://github.com/abey79/resvg", branch = "vsvg" }
