[package]
name = "rusteroids"
description = "Your plotter-friendly Asteroids clone"
authors = ["Antoine Beyeler"]
version = "0.1.0-alpha.0"
edition = "2021"


[dependencies]
bevy = { version = "0.11.2" }
bevy-inspector-egui = { version = "0.19.0" }
rand = "0.8.5"
rand_distr = "0.4.3"
vsvg = { git = "https://github.com/abey79/vsvg", rev = "b3e6aa40e8114de389539f92acb3f4ffd4b184f0", features = ["bevy"] }
kurbo = "0.9.1" # sync with vsvg
geo = "0.26.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.64", features = ["Document", "Element", "Window", "HtmlElement"] }
wasm-bindgen = "0.2.87"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3


[patch.crates-io]
usvg = { git = "https://github.com/abey79/resvg", branch = "vsvg" }
rosvgtree = { git = "https://github.com/abey79/resvg", branch = "vsvg" }
