[package]
name = "rusteroids"
description = "Your plotter-friendly Asteroids clone"
authors = ["Antoine Beyeler"]
version = "0.1.0-alpha.0"
edition = "2021"


[dependencies]
bevy = { version = "0.11.2" }
bevy-inspector-egui = { version = "0.19.0" }
itertools = "0"
rand = "0.8.5"
rand_distr = "0.4.3"
vsvg = { git = "https://github.com/abey79/vsvg", rev = "3c88cac0b8b2681b76bd09ec76df4f7610932594", features = ["bevy"] }
vsvg-sketch = { git = "https://github.com/abey79/vsvg", rev = "3c88cac0b8b2681b76bd09ec76df4f7610932594" }
# vsvg = { path = "../vsvg/vsvg", features = ["bevy"] }
# vsvg-sketch = { path = "../vsvg/vsvg-sketch" }

kurbo = "0.9.1" # sync with vsvg
geo = "0.26.0"
voronoice = "0.2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.64", features = ["Document", "Element", "Window", "HtmlElement"] }
wasm-bindgen = "0.2.87"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3


[patch.crates-io]
usvg = { git = "https://github.com/abey79/resvg", branch = "vsvg" }
rosvgtree = { git = "https://github.com/abey79/resvg", branch = "vsvg" }
